MenuDataModel. update swagger. removed autowired for a constructor.
