# src/main/java/com/MenuMaker/MenuMakerApi/controller/AuthController.java
@@ -1,17 +1,16 @@
 package com.MenuMaker.MenuMakerApi.controller;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.MenuMaker.MenuMakerApi.model.request.LoginRequest;
@@ -41,7 +40,6 @@ public class AuthController {
     private final AuthService authService;
     private final EmailService emailService;
 
-    @Autowired
     public AuthController(AuthService authService, EmailService emailService) {
         this.authService = authService;
         this.emailService = emailService;
@@ -51,15 +49,13 @@ public class AuthController {
     public ResponseEntity<ApiResponse> login(@Valid @RequestBody LoginRequest loginRequest) {
         try {
             log.debug("Login from {}", loginRequest.getEmail());
-            // create a token with 10min expiration time with email
-            String token = authService.shortTimeToken(loginRequest.getEmail());
-            String link = backendDomain + "/api/v1/auth/login?token=" + token;
 
-            // then send email with link
+            String token = authService.shortTimeToken(loginRequest.getEmail());
+            String link = backendDomain + "/api/v1/auth/login/" + token;
+
             emailService.sendMagicLink(loginRequest.getEmail(), link);
 
             return ResponseUtils.buildResponse(HttpStatus.OK, "Email sent", null);
-
         } catch (ValidationException e) {
             log.error("Error in login validation: {}", e.getMessage());
             return ResponseUtils.buildResponse(HttpStatus.BAD_REQUEST, "Invalid Fields", null);
@@ -75,8 +71,8 @@ public class AuthController {
     }
 
     // TODO: what if the token is expired, no redirection or message ?
-    @GetMapping("/login")
-    public ResponseEntity<ApiResponse> getAuthToken(@RequestParam("token") String token, HttpServletResponse response) {
+    @GetMapping("/login/{token}")
+    public ResponseEntity<ApiResponse> getAuthToken(@PathVariable("token") String token, HttpServletResponse response) {
         try {
             log.debug("Authentification with short time token {}", token);
 
