# src/main/java/com/MenuMaker/MenuMakerApi/model/menuData/Dish.java
@@ -1,0 +1,32 @@
+package com.MenuMaker.MenuMakerApi.model.menuData;
+
+public class Dish {
+    private String name;
+    private String price;
+    private String description;
+    // private String img;
+
+    public String getName() {
+        return this.name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getPrice() {
+        return this.price;
+    }
+
+    public void setPrice(String price) {
+        this.price = price;
+    }
+
+    public String getDescription() {
+        return this.description;
+    }
+
+    public void setDescription(String description) {
+        this.description = description;
+    }
+}
